k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP  
  ports:
    - name: app
      port: 8080
      protocol: TCP
      targetPort: 8080
